--- a/TesteTecnicoDotNet.Api/appsettings.json
+++ b/TesteTecnicoDotNet.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=Credito;User Id=sa;Password=Roberto@123;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,1433;Database=Credito;User Id=sa;Password=SuaSenha@123;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
