--- a/TesteTecnicoDotNet.Infra.Data/TesteTecnicoDotNet.Infra.Data.csproj
+++ b/TesteTecnicoDotNet.Infra.Data/TesteTecnicoDotNet.Infra.Data.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\TesteTecnicoDotNet.Business\TesteTecnicoDotNet.Business.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
